--- a/AngularCustomerApps/CustomerManagementApp.html
+++ b/AngularCustomerApps/CustomerManagementApp.html
@@ -40,6 +40,7 @@
 
     <script src="JS/angular.js" type="text/javascript"></script>
     <script src="JS/angular-route.js" type="text/javascript"></script>
+    <script src="https://code.angularjs.org/1.3.0-rc.2/angular-animate.js" type="text/javascript"></script>
 
     <script src="app.js" type="text/javascript"></script>
     <script src="/controller/controllers.js" type="text/javascript"></script>
@@ -56,7 +57,7 @@
         <!--<div class="navbar navbar-collapse" id="bs-example-navbar-collapse-1">-->
             <ul class="nav navbar-nav">
                 <li class="{'active':getClass('/customers')}"><a href="#/customers">Customers</a></li>
-                <li class="{'active':getClass('/customerOrders')}"><a href="#/customerOrders">Customer Orders</a></li>
+                <!--<li class="{'active':getClass('/customerOrders')}"><a href="#/customerOrders">Customer Orders</a></li>-->
                 <li class="{'active':getClass('/Orders')}"><a href="#/orders">Orders</a></li>
             </ul>
         <!--</div>-->
